# cred

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci-cd.yml  e2e.yml  homebrew.yml
scripts/: install.sh  pre-commit.sh
src/: cli.rs  config.rs  envfile.rs  error.rs  io.rs  lib.rs  main.rs  project.rs  tests.rs  vault.rs
src/providers/: github.rs  mod.rs
src/targets/: github.rs  mod.rs
src/tests/: e2e_github.rs  integration.rs  mod.rs  unit.rs
tests/: e2e_github.rs  integration.rs
