[package]
name = "cred"
version = "0.1.0"
edition = "2024"
description = "A command line tool to manage secrets and environment variables locally and remotely."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
