[package]
name = "cred"
version = "0.1.1"
edition = "2024"
description = "A command-line tool to manage secrets and environment variables locally and remotely."
readme = "README.md"
keywords = ["secrets", "automation", "ai", "ci", "devops"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT OR Apache-2.0"

[features]
default = ["github"]
github = []

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
keyring = "3.6.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sodiumoxide = "0.2.7"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"
rand = "0.9.2"
